--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
       function handleCredentialResponse(response) {
-        console.log("User response:", response);
-        const data = jwt_decode(response.credential);
-        console.log("User information:", data);
-        document.getElementById("user-info").innerHTML = `
-          <p>Welcome, ${data.name}</p>
-          <p>Email: ${data.email}</p>
-          <img src="${data.picture}" alt="User Photo" style="width:50px; height:50px;">
-        `;
-      }
+      console.log("User response:", response);
+      const data = jwt_decode(response.credential);
+      console.log("User information:", data);
+      document.getElementById("user-info").innerHTML = `
+        <p>Welcome, ${data.name}</p>
+        <p>Email: ${data.email}</p>
+        <img src="${data.picture}" alt="User Photo" style="width:50px; height:50px;">
+      `;
+
+       // Redirect to the home page after successful login
+       window.location.href = "index1.html"; // Replace with your desired page
+       }
+
   
       function initializeGoogleSignIn() {
         google.accounts.id.initialize({
