--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
     <!--Script.js-->
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
