--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
       function handleCredentialResponse(response) {
-      console.log("User response:", response);
-      const data = jwt_decode(response.credential);
-      console.log("User information:", data);
-      document.getElementById("user-info").innerHTML = `
-        <p>Welcome, ${data.name}</p>
-        <p>Email: ${data.email}</p>
-        <img src="${data.picture}" alt="User Photo" style="width:50px; height:50px;">
-      `;
+        console.log("User response:", response);
+        const data = jwt_decode(response.credential);
+        console.log("User information:", data);
+        document.getElementById("user-info").innerHTML = `
+          <p>Welcome, ${data.name}</p>
+          <p>Email: ${data.email}</p>
+          <img src="${data.picture}" alt="User Photo" style="width:50px; height:50px;">
+        `;
 
-       // Redirect to the home page after successful login
-       window.location.href = "index1.html"; // Replace with your desired page
-       }
 
-  
+        // Redirect to the home page after successful login
+        window.location.href = "index1.html"; // Replace with your target page
+      }
+      
       function initializeGoogleSignIn() {
         google.accounts.id.initialize({
           client_id: "820094831233-i1gbs561cchbm7dcmv2grmjc89pjpqnc.apps.googleusercontent.com",
@@ -36,8 +36,7 @@
         );
       }
     </script>
-  </head>
-
+</head>
 
 <body onload="initializeGoogleSignIn()">
     <div class="wrapper">
