--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <div class="social-login">
                     <div id="google-signin-button"></div>
                     </div>
+                    <div id="user-info"></div>
                 </div>
             </form>
         </div>
