--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p>Email: ${data.email}</p>
         <img src="${data.picture}" alt="User Photo" style="width:50px; height:50px;">
       `;
+      window.location.href = "index1.html";
     }
 
       function initializeGoogleSignIn() {
