--- a/index1.html
+++ b/index1.html
@@ -76,7 +76,7 @@
             height: 24px;
             margin-right: 10px;
         }
-
+        
         /* User info styling */
         #user-info {
             position: absolute;
@@ -107,10 +107,12 @@
     <script>
         function handleCredentialResponse(response) {
             const data = jwt_decode(response.credential);
+
+            // Ensure that `picture`, `name`, and `email` exist before updating the HTML
             document.getElementById("user-info").innerHTML = `
-                <img src="${data.picture}" alt="User Photo">
-                <p>${data.name}</p>
-                <p>${data.email}</p>
+                <img src="${data.picture || ''}" alt="User Photo">
+                <p>${data.name || 'Unknown'}</p>
+                <p>${data.email || ''}</p>
             `;
         }
 
@@ -123,10 +125,14 @@
                 document.getElementById("google-signin-button"),
                 { theme: "outline", size: "large" }
             );
+            google.accounts.id.prompt(); // Automatically prompt if the user is signed in
         }
     </script>
 </head>
 <body onload="initializeGoogleSignIn()">
+    <!-- Google Sign-In button container -->
+    <div id="google-signin-button"></div>
+
     <!-- User info container for top-right corner display -->
     <div id="user-info"></div>
 
@@ -150,7 +156,7 @@
     </div>
 
     <script>
-        const apiKey = 'd204a5bf9c189e5db82a31d6f49cafb1'; 
+        const apiKey = 'd204a5bf9c189e5db82a31d6f49cafb1';
 
         document.getElementById('getWeatherBtn').addEventListener('click', () => {
             const city = document.getElementById('cityInput').value;
@@ -180,3 +186,4 @@
     </script>
 </body>
 </html>
+
