--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             sessionStorage.setItem("userImage", data.picture);
     
             // Redirect to the weather page
-            window.location.href = "weather.html"; // Replace with your weather page URL
+            window.location.href = "index1.html"; // Replace with your weather page URL
         }
     
         function initializeGoogleSignIn() {
