--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
         function initializeGoogleSignIn() {
             google.accounts.id.initialize({
-                client_id: "YOUR_CLIENT_ID",
+                client_id: "820094831233-i1gbs561cchbm7dcmv2grmjc89pjpqnc.apps.googleusercontent.com",
                 callback: handleCredentialResponse
             });
             google.accounts.id.renderButton(
