--- a/index1.html
+++ b/index1.html
@@ -182,6 +182,29 @@
                 });
         });
     </script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyC9LzLVOkHttnOk6r7WmhE_hdDmBiSAX6Q",
+          authDomain: "it-udirtgal-1d0f0.firebaseapp.com",
+          projectId: "it-udirtgal-1d0f0",
+          storageBucket: "it-udirtgal-1d0f0.firebasestorage.app",
+          messagingSenderId: "779825070222",
+          appId: "1:779825070222:web:f75505e545e08bcb14c9df",
+          measurementId: "G-K7JJZ8SQHQ"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 </body>
 </html>
 
