--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                     document.cookie = `name=${username}; path=/; max-age=86400;`;
                     document.cookie = `email=${email}; path=/; max-age=86400;`;
                     document.cookie = `picture=https://example.com/default-pic.png; path=/; max-age=86400;`;
-                    wrapper.classList.remove('active');
+                    // Trigger animation on success
+                    document.querySelector('.wrapper').classList.remove('active');
                 })
                 .catch((error) => {
                     const errorMessage = error.message;
