--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 <button type="submit" class="btn animation" style="--i:3; --j:24">Login</button>
                 <div class="linkTxt animation" style="--i:5; --j:25">
                     <p>Don't have an account? <a href="#" class="register-link">Sign Up</a></p>
+                    <p>or sign up with</p>
+                    <div class="social-login">
+                        <div id="google-signin-button"></div>
+                    </div>
                 </div>
             </form>
         </div>
