--- a/index.html
+++ b/index.html
@@ -144,10 +144,6 @@
             auth.createUserWithEmailAndPassword(email, password)
                 .then((userCredential) => {
                     alert("sign up success.");
-                    const user = userCredential.user;
-                    document.cookie = `name=${username}; path=/; max-age=86400;`;
-                    document.cookie = `email=${email}; path=/; max-age=86400;`;
-                    document.cookie = `picture=https://example.com/default-pic.png; path=/; max-age=86400;`;
                     // Trigger animation on success
                     document.querySelector('.wrapper').classList.remove('active');
                 })
@@ -168,7 +164,12 @@
                 .then((userCredential) => {
                     alert("Login successful.");
                     const user = userCredential.user;
+                    console.log("user: ", user);
+                    
+                    document.cookie = `name=${username}; path=/; max-age=86400;`;
                     document.cookie = `email=${email}; path=/; max-age=86400;`;
+                    document.cookie = `picture=https://i.pinimg.com/1200x/c0/27/be/c027bec07c2dc08b9df60921dfd539bd.jpg; path=/; max-age=86400;`;
+
                     window.location.href = "index1.html"; // Redirect to a dashboard or homepage
                 })
                 .catch((error) => {
