--- a/index.html
+++ b/index.html
@@ -143,9 +143,20 @@
 
             auth.createUserWithEmailAndPassword(email, password)
                 .then((userCredential) => {
-                    alert("sign up success.");
-                    // Trigger animation on success
-                    document.querySelector('.wrapper').classList.remove('active');
+                    const user = userCredential.user;
+
+                    // Update the displayName for the user
+                    user.updateProfile({
+                        displayName: username
+                    }).then(() => {
+                        alert("Sign up successful.");
+                        console.log("Display name set to:", username);
+
+                        // Trigger animation on success
+                        document.querySelector('.wrapper').classList.remove('active');
+                    }).catch((error) => {
+                        console.error("Error setting displayName:", error);
+                    });
                 })
                 .catch((error) => {
                     const errorMessage = error.message;
@@ -165,8 +176,8 @@
                     alert("Login successful.");
                     const user = userCredential.user;
                     console.log("user: ", user);
-                    
-                    document.cookie = `name=${username}; path=/; max-age=86400;`;
+
+                    document.cookie = `name=${user.displayName}; path=/; max-age=86400;`;
                     document.cookie = `email=${email}; path=/; max-age=86400;`;
                     document.cookie = `picture=https://i.pinimg.com/1200x/c0/27/be/c027bec07c2dc08b9df60921dfd539bd.jpg; path=/; max-age=86400;`;
 
